# clipspeak

./: README.md  setup.cfg
src/clipspeak/: __init__.py  clipboard.py  main.py  speech.py
tests/: __init__.py
tests/clipspeak/: __init__.py  test_clipboard.py  test_speech.py
