[metadata]
name = clipspeak
version = 0.1.0
description = A Python project that synthesizes and speaks text from the clipboard using Azure Cognitive Services.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
install_requires =
    azure-cognitiveservices-speech
    pyperclip

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    clipspeak = clipspeak.main:main